# sfDoc

./: README.md  check_files.py  commands.txt  debug_config.py  pyproject.toml  verify_sfdx.py  verify_structure.py
config/: default_config.yaml
src/: __init__.py  cli.py
src/apex/: __init__.py  analyzer.py  parser.py
src/automations/: __init__.py
src/execution/: __init__.py  path_analyzer.py  visualizer.py
src/llm/: __init__.py  documenter.py
src/models/: __init__.py  analysis_models.py  apex_models.py
src/utils/: __init__.py  sfdx_helper.py
